# SymbolRecognition

./: CMakeLists.txt  README.md
include/: neuralnetwork.hpp  neuron.hpp
resources/: main.qml  recource.qrc
source/: main.cpp  neuralnetwork.cpp  neuron.cpp
